added back button and placeholder

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -13,5 +13,6 @@
         <input type="text" name="description"/>
         <input type="submit" value="Add scientist"/>
     </form>
+    <button><a href="/">Back</a></button>
 </body>
 </html>
