--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -7,11 +7,12 @@
 </head>
 <body>
     <form action="/<%=index%>?_method=PUT" method="POST">
-        <label for="name" value="<%=scientist.name%>">Name:</label>
-        <input type="text" name="name"/>
-        <label for="description" value="<%scientist.description%>">Description:</label>
-        <input type="text" name="description"/>
+        <label for="name">Name:</label>
+        <input type="text" name="name" value="<%=scientist.name%>"/>
+        <label for="description">Description:</label>
+        <input type="text" name="description"/ value="<%=scientist.description%>"/>
         <input type="submit" value="Confirm edit"/>
     </form>
+    <button><a href="/">Back</a></button>
 </body>
 </html>
